# subscriber

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: error.rs  main.rs
src/core/: broadcast.rs  command.rs  error.rs  handle.rs  mod.rs  notify.rs  stats.rs
src/core/shutdown/: mod.rs
src/core/shutdown/handle/: handle.rs  mod.rs
src/ctx/: error.rs  info.rs  logging.rs  mod.rs  options.rs  state.rs  utils.rs
src/svc/: dispatcher.rs  mod.rs  shutdown.rs
src/svc/http/: middleware.rs  mod.rs  router.rs
src/svc/pubsub/: error.rs  messages.rs  mod.rs  subscriber.rs
tests/: send_event.sh  send_multiple_event.sh  send_shutdown.sh
