[package]
name = "hyper_tower"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "^0.15.7"
futures-util = "0.3.31"
hostname = "0.4.1"
humantime = "2.1.0"
hyper = { version = "1.6.0", features = ["http1", "http2"] }
hyper-util = { version = "0.1.14", features = [] }
log = "0.4.27"
once_cell = "1.21.3"
regex = "1.11.1"
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = [] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tower-service = "0.3.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
users = "0.11.0"
rand = "0.9.2"