[package]
name = "subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "^0.15"
futures-util = "0.3"
hostname = "0.4"
humantime = "2.2"
log = "0.4"
once_cell = "1.21"
rand = "0.9"
redis = { version = "0", features = ["aio", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util =  "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }